--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
           "style": "scss"
         }
       },
-      "root": "index",
+      "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
